--- a/app/src/main/res/drawable/ic_btn_daftar.xml
+++ b/app/src/main/res/drawable/ic_btn_daftar.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/maroon"/>
+            <solid android:color="@color/lazydog"/>
             <corners android:radius="6dp"/>
         </shape>
     </item>
