--- a/app/src/main/res/layout/activity_beranda.xml
+++ b/app/src/main/res/layout/activity_beranda.xml
@@ -63,6 +63,7 @@
             app:layout_constraintEnd_toEndOf="@+id/Atas"/>
 
         <TextView
+            android:id="@+id/Alamat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/jalan"
@@ -148,54 +149,61 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <androidx.cardview.widget.CardView
+                android:id="@+id/GambarBeranda"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="30dp">
+                android:layout_height="212dp"
+                app:cardBackgroundColor="@color/gray_thin"
+                app:cardCornerRadius="10dp"
+                android:layout_marginTop="30dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent">
 
                 <ImageView
-                    android:id="@+id/GambarBeranda"
                     android:layout_width="match_parent"
-                    android:layout_height="212dp"
+                    android:layout_height="match_parent"
                     android:background="@drawable/rounded"
-                    android:backgroundTint="@color/gray_mid"
                     android:scaleType="centerCrop"
                     android:src="@drawable/img_1"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
                     tools:ignore="ContentDescription,ImageContrastCheck" />
 
-                <ImageView
-                    android:id="@+id/Tag"
-                    android:layout_width="150dp"
-                    android:layout_height="40dp"
-                    android:layout_marginTop="15dp"
-                    android:src="@drawable/ic_rectangle"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0"
-                    tools:ignore="ContentDescription,ImageContrastCheck" />
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/poppins_medium"
-                    android:text="@string/juli"
-                    android:textAllCaps="true"
-                    android:textColor="@color/white"
-                    android:textSize="16sp"
-                    app:layout_constraintBottom_toBottomOf="@+id/Tag"
-                    app:layout_constraintEnd_toEndOf="@+id/Tag"
-                    app:layout_constraintStart_toStartOf="@+id/Tag"
-                    app:layout_constraintTop_toTopOf="@+id/Tag"
-                    tools:ignore="TextContrastCheck" />
+                    <ImageView
+                        android:id="@+id/Tag"
+                        android:layout_width="150dp"
+                        android:layout_height="40dp"
+                        android:layout_marginTop="15dp"
+                        android:src="@drawable/ic_rectangle"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0"
+                        tools:ignore="ContentDescription,ImageContrastCheck" />
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/poppins_medium"
+                        android:text="@string/juli"
+                        android:textAllCaps="true"
+                        android:textColor="@color/white"
+                        android:textSize="16sp"
+                        app:layout_constraintBottom_toBottomOf="@+id/Tag"
+                        app:layout_constraintEnd_toEndOf="@+id/Tag"
+                        app:layout_constraintStart_toStartOf="@+id/Tag"
+                        app:layout_constraintTop_toTopOf="@+id/Tag"
+                        tools:ignore="TextContrastCheck" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </androidx.cardview.widget.CardView>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -224,6 +232,7 @@
                     tools:ignore="ContentDescription,TextConstrastCheck" />
 
                 <TextView
+                    android:id="@+id/Makaroni"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/poppins_medium"
@@ -249,6 +258,7 @@
                     tools:ignore="ContentDescription,TextConstrastCheck" />
 
                 <TextView
+                    android:id="@+id/Opak"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/poppins_medium"
@@ -274,6 +284,7 @@
                     tools:ignore="ContentDescription,TextConstrastCheck" />
 
                 <TextView
+                    android:id="@+id/Emping"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/poppins_medium"
@@ -299,6 +310,7 @@
                     tools:ignore="ContentDescription,TextConstrastCheck" />
 
                 <TextView
+                    android:id="@+id/Cipir"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/poppins_medium"
